tests/paczka1/fuzzy1/19697190.err
Error in line 1: MpZsyto S68 68,7
Error in line 2: MpZsyto A166 0,7
Error in line 11: MPLmC6 S68 37,3
Error in line 14: MPLmC6 A594 -1,9
Error in line 16: MpZsyto S68 69,7
Error in line 12: MPLmC6 A594 3,4
Error in line 18: ZBAnxiG4Ab2 A594 14,7
Error in line 23: MPLmC6 A478 67,3
Error in line 26: A166 A166 92,0
